syntax = "proto3";

import "google/protobuf/empty.proto";

package account;

option java_multiple_files = true;
option java_package = "com.service.account";
option java_outer_classname = "UserProto";

//-----------------------------------
// service
//-----------------------------------
service GrpcUserService {
  rpc findUserById(GrpcUserRequest) returns (GrpcUserResponse);
  rpc findUserByName(GrpcUserRequest) returns (GrpcUserResponse);
  rpc loginUser(GrpcUserProtoDto) returns (GrpcUserResponse);
}

//-----------------------------------
// dto
//-----------------------------------
message GrpcUserProtoDto {
  uint64 userSeq = 1;
  string userId = 2;
  string userPassword = 3;
  string userType = 4;
  string userName = 5;
  string userEmail = 6;
  string userAddress = 7;
}

//-----------------------------------
// request
//-----------------------------------
message GrpcUserRequest {
  uint64 userSeq = 1;
  string userId = 2;
  string userPassword = 3;
  string userType = 4;
  string userName = 5;
  string userEmail = 6;
  string userAddress = 7;
}

//-----------------------------------
// response
//-----------------------------------
message GrpcUserResponse {
  string statusCode = 1;
  string message = 2;
  repeated GrpcUserProtoDto dto = 3;
}
